# bank_project_ML

./: .env  README.md  cleaned_bank_data.csv  cleaned_bank_data_from_outliers.csv  discover.py  docker-compose.yaml  load_data.py  main.py  preprocessing_outliers.py  pyproject.toml  storing_the_data_in_mysql_server.py  temp.py
.github/workflows/: first_workflow.yml
api/: Dockerfile  app.py
config/: airflow.cfg
dags/: first_dag.py
models/: preprocessor.pkl  xgboost_model.pkl
reports/: eda_report.txt
src/: config.py  data_split.py  encoding.py  evaluation.py  feature_engineering.py  logger.py  main.py  model.py  skewed_handling.py  train.py
